pesapal RDBMS Application

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,3 +35,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+// Enable standard input for REPL mode
+bootRun {
+    standardInput = System.in
+}
