--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,13 @@ spring.h2.console.path=/h2-console
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+
+# REPL Mode Configuration
+# Set to true to enable interactive command-line mode
+# Run with: java -jar rdbms.jar --repl.enabled=true
+repl.enabled=false
+
+# Logging Configuration for REPL mode
+# Reduce noise when running in REPL mode
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
