--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,33 +1,37 @@
-spring.application.name=rdbms-backend
+# Application Name
+spring.application.name=file-based-rdbms
+
+# Server Configuration
 server.port=8080
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:rdbmsdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# ==================== FILE-BASED RDBMS CONFIGURATION ====================
+# This RDBMS uses custom file storage, NOT JPA/H2
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Data directory for our custom storage
+rdbms.data.directory=data
 
-# H2 Console (for debugging)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:3000
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-
-# REPL Mode Configuration
-# Set to true to enable interactive command-line mode
+# REPL Mode (set to true to enable command-line interface)
 # Run with: java -jar rdbms.jar --repl.enabled=true
 repl.enabled=false
 
-# Logging Configuration for REPL mode
-# Reduce noise when running in REPL mode
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+# ==================== DISABLE JPA/H2 ====================
+# We're implementing our own storage layer, so disable Spring Data JPA
+
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
+  org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
+  org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
+
+# ==================== LOGGING ====================
+
+# Reduce logging noise
+logging.level.org.springframework=WARN
+logging.level.com.pesapal.rdbms=INFO
+
+# Show our storage operations
+logging.level.com.pesapal.rdbms.storage=DEBUG
+
+# ==================== JACKSON JSON CONFIGURATION ====================
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.default-property-inclusion=non_null
