--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,23 +1,16 @@
 # Test Configuration
-spring.application.name=rdbms-backend-test
+spring.application.name=file-based-rdbms-test
 
-# H2 Database Configuration for Tests
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Use a separate test data directory
+rdbms.data.directory=build/test-data
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-
-# Disable REPL for tests
+# Disable REPL in tests
 repl.enabled=false
 
-# Disable banner
+# Disable the startup banner for cleaner test output
 spring.main.banner-mode=off
 
-# Reduce logging noise during tests
-logging.level.org.hibernate=WARN
+# Logging for tests
 logging.level.org.springframework=WARN
+logging.level.com.pesapal.rdbms=INFO
+logging.level.com.pesapal.rdbms.storage.index=DEBUG
